@@ -1,0 +1,113 @@
+object Finputstring: TFinputstring
+  Left = 505
+  Height = 175
+  Top = 396
+  Width = 541
+  Caption = 'opsi-script - string input'
+  ClientHeight = 175
+  ClientWidth = 541
+  LCLVersion = '2.0.0.4'
+  object BitBtn1: TBitBtn
+    Left = 232
+    Height = 30
+    Top = 128
+    Width = 75
+    Default = True
+    DefaultCaption = True
+    Kind = bkOK
+    ModalResult = 1
+    TabOrder = 1
+  end
+  object FlowPanel1: TFlowPanel
+    Left = 0
+    Height = 112
+    Top = 0
+    Width = 541
+    Align = alTop
+    BevelOuter = bvNone
+    ControlList = <    
+      item
+        Control = Label1
+        WrapAfter = waAuto
+        Index = 0
+      end    
+      item
+        Control = EditButton1
+        WrapAfter = waAuto
+        Index = 1
+      end>
+    FlowLayout = tlTop
+    FlowStyle = fsTopBottomLeftRight
+    TabOrder = 0
+    object Label1: TLabel
+      Left = 10
+      Height = 37
+      Top = 10
+      Width = 510
+      Alignment = taCenter
+      Anchors = []
+      AutoSize = False
+      BorderSpacing.Around = 10
+      BorderSpacing.InnerBorder = 2
+      Caption = 'Label1'
+      Font.Height = -19
+      ParentColor = False
+      ParentFont = False
+    end
+    object EditButton1: TEditButton
+      Left = 10
+      Height = 29
+      Top = 68
+      Width = 511
+      AutoSize = False
+      Anchors = [akLeft, akRight]
+      BorderSpacing.Around = 10
+      BorderSpacing.InnerBorder = 3
+      ButtonWidth = 30
+      Font.Height = -16
+      Glyph.Data = {
+        36040000424D3604000000000000360000002800000010000000100000000100
+        2000000000000004000064000000640000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        000000000000000000000000000D00000075000000CA000000F5000000F60000
+        00CE000000790000000F00000000000000000000000000000000000000000000
+        00000000000000000047000000E6000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000E800000049000000000000000000000000000000000000
+        000000000062000000FC000000FF000000D70000004F0000000C0000000C0000
+        004F000000D8000000FF000000FD000000630000000000000000000000000000
+        004F000000FD000000FF000000D70000000F0000000000000000000000000000
+        00000000000F000000D8000000FF000000FD0000004E00000000000000200000
+        00F1000000FF000000FF0000004D000000000000004F000000E9000000E80000
+        004D000000000000004F000000FF000000FF000000F10000001F000000B70000
+        00FF000000FF000000FF0000000B00000000000000EA000000FF000000FF0000
+        00E8000000000000000C000000FF000000FF000000FF000000B6000000B70000
+        00FF000000FF000000FF0000000A00000000000000E9000000FF000000370000
+        002F000000000000000C000000FF000000FF000000FF000000B7000000200000
+        00F1000000FF000000FF0000004D0000000000000051000000E90000002C0000
+        0000000000000000004F000000FF000000FF000000F100000020000000000000
+        004F000000FD000000FF000000D60000000F0000000000000000000000000000
+        00000000000F000000D7000000FF000000FD0000004F00000000000000000000
+        000000000062000000FD000000FF000000D60000004D0000000A0000000B0000
+        004D000000D7000000FF000000FD000000630000000000000000000000000000
+        00000000000000000047000000E7000000FF000000FF000000FF000000FF0000
+        00FF000000FF000000E800000049000000000000000000000000000000000000
+        000000000000000000000000000E00000076000000CB000000F6000000F70000
+        00CF0000007A0000000F00000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000000000000000
+        0000000000000000000000000000000000000000000000000000
+      }
+      MaxLength = 0
+      NumGlyphs = 1
+      OnButtonClick = EditButton1ButtonClick
+      ParentFont = False
+      PasswordChar = #0
+      TabOrder = 0
+      Text = 'EditButton1'
+    end
+  end
+end
