@@ -8,6 +8,9 @@ opsi-winst/opsi-script (4.12.1.2) stable; urgency=low
 
   * add oslistedit to projectfiles
   * fixes in oslistedit
+  * add osinputstring
+  * add new string function stringinput(< message str>,< boolstr confidential>)
+  * document randomIntStr(<>)
 
 -- Detlef Oertel <d.oertel@uib.de>  Fri, 12 Apr 2019:15:00:00 +0200
 
